[gd_scene load_steps=5 format=3 uid="uid://bej21vmdia824"]

[ext_resource type="Script" uid="uid://j03mii2bbrjy" path="res://scenes/difficulty_selection_scene.gd" id="1_diff"]
[ext_resource type="PackedScene" uid="uid://cik30de5gaaah" path="res://scenes/ingame_scene.tscn" id="2_game"]
[ext_resource type="PackedScene" uid="uid://bkk87o2ooo6at" path="res://ui/overlays/fade_overlay.tscn" id="3_fade"]
[ext_resource type="Theme" uid="uid://d22mpqutkotsu" path="res://ui/theme.tres" id="4_theme"]

[node name="DifficultySelectionScene" type="Node2D"]
script = ExtResource("1_diff")
game_scene = ExtResource("2_game")

[node name="UI" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_theme")

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -179.0
offset_right = 100.0
offset_bottom = 179.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="HSeparator" type="HSeparator" parent="UI/Control/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="UI/Control/VBoxContainer"]
layout_mode = 2
text = "Select Difficulty"
horizontal_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="UI/Control/VBoxContainer"]
layout_mode = 2

[node name="EasyButton" type="Button" parent="UI/Control/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
text = "Easy"

[node name="MediumButton" type="Button" parent="UI/Control/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
text = "Medium"

[node name="HardButton" type="Button" parent="UI/Control/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
text = "Hard"

[node name="HSeparator3" type="HSeparator" parent="UI/Control/VBoxContainer"]
layout_mode = 2

[node name="BackButton" type="Button" parent="UI/Control/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
text = "Back"

[node name="FadeOverlay" parent="UI" instance=ExtResource("3_fade")]
unique_name_in_owner = true
visible = false
